--- a/csstest.css
+++ b/csstest.css
@@ -17,13 +17,15 @@ header {
 .body {
     width: 600px;
     margin: auto;
+    background-color: silver;
+    overflow: hidden;
 }
 
 .cards li{
     list-style: none;
     border: 1px solid;
     background-color: pink;
-    width: 180px;
+    width: 178px;
     height: 30px;
     margin-bottom: 10px;
 }
@@ -46,4 +48,29 @@ header {
 footer {
     text-align: center;
     background-color: orchid;
+}
+
+span {
+    display: inline-block;
+    width: 178px;
+    height: 30px;
+    border: 1px solid;
+    background-color: yellowgreen;
+    font-size: medium;
+    margin: 0px 15px 10px 15px;
+}
+/* 
+span:nth-child(3n+1) , span:nth-child(3n+2) {
+    margin-right: 27px;
+} */
+
+.inline {
+    font-size: 0px;
+    margin: 0px -15px;
+    background-color: #ffa;
+}
+
+.inline-block>li {
+    display: inline-block;
+    width: 100px;
 }
