--- a/mi/mi.css
+++ b/mi/mi.css
@@ -2,7 +2,7 @@
   margin: 0px;
   padding: 0px;
   font: 14px/1.5 helvetica Neue,helvetica, arial, Microsoft Yahei,Hriagino Sans GB,Heiti SC,WenQuanYi Micro Hei,sans-serif;
-  background-color: rgba(0,0,0,0.1);
+  /* background-color: rgba(0,0,0,0.1);  */
 }
 div.link-block{
   position: relative;
@@ -321,35 +321,53 @@ li{
 }
 
 .body-homepage-list-blocklist{
- display: none;
- position: absolute;
- width: 992px;
- height: 100%;
- top: 0;
- left: 234px;
- background-color: #fff;
- overflow: hidden;
-}
-#body-home-page-list>ul>li:nth-child(2)>.body-homepage-list-blocklist{
-  width: 496px;
-}
-#body-home-page-list>ul>li:hover .body-homepage-list-blocklist{
-  display: block;
+  display: none;
+  position: absolute;
   z-index: 200;
-  box-shadow: 5px 5px 15px rgba(200, 200, 200,0.8);
+  height: 100%;
+  top: 0;
+  left: 234px;
+  list-style-type: none;
+  overflow: hidden;
 }
 
-#body-home-page-list>ul>li .body-homepage-list-blocklist>ul{
+#body-home-page-list>ul>li:hover .body-homepage-list-blocklist{
+  display: block;
+}
+#body-home-page-list>ul>li:hover .body-homepage-list-blocklist>ul{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  /* justify-content: space-around; */
+  height: 460px;
+  width: 992px;
+  /* background-color: #fff; */
+  box-shadow: 5px 5px 15px rgba(200, 200, 200,0.8);
+}
+.body-homepage-list-blocklist>ul>li{
+  width: 248px;
+  height: 76px;
+  color: #000;
+  background: white;
+}
+.body-homepage-list-blocklist>ul>li:last-child{
+  height: 0px;
+  flex-grow: 1;
+}
+
+
+/* #body-home-page-list>ul>li .body-homepage-list-blocklist{
   float: left;
   width: 248px;
   height: 456px;
   padding: 2px 0;
 }
-#body-home-page-list>ul>li .body-homepage-list-blocklist>ul>li{
+#body-home-page-list>ul>li .body-homepage-list-blocklist>li{
   display: block;
   width: 248px;
   height: 76px;
-}
+} */
 #body-home-page-list>ul>li .body-homepage-list-blocklist>ul>li>a{
   display: block;
   width: 225px;
@@ -367,7 +385,6 @@ li{
 }
 #body-home-page-list>ul>li .body-homepage-list-blocklist>ul>li>a>span{
   vertical-align: top;
-  /* display: inline-block; */
   line-height: 40px;
 }
 
