--- a/mi/mi.css
+++ b/mi/mi.css
@@ -568,6 +568,112 @@ li{
   text-align: center;
 }
 
+#body-homepage-middle{
+  margin: 30px 0;
+  background-color: #f5f5f5;
+  padding-bottom: 30px;
+}
+#body-homepage-phone-title{
+  margin: auto;
+  width: 1226px;
+  height: 58px;
+}
+#body-homepage-phone-title>h2{
+  float: left;
+  font-size: 22px;
+  font-weight: 200px;
+  line-height: 58px;
+  color: #333;
+}
+#body-homepage-phone-title>a{
+  float: right;
+  font-size: 16px;
+  line-height: 58px;
+  text-decoration: none;
+  color: #333;
+}
+#body-homepage-phone-title>a>p{
+  display: inline-block;
+  border-radius: 20px;
+  color: white;
+  background-color: silver;
+  font-size: 12px;
+  width: 20px;
+  height: 20px;
+  margin-left: 5px;
+  line-height: 12px;
+  padding: 4px;
+  box-sizing: border-box;
+}
+#body-homepage-phone-title>a:hover>p{
+  background-color: #ff6700;
+  transition: .3s;
+}
+#body-homepage-phone-title>a:hover{
+  color: #ff6700;
+  transition: .3s;
+}
+
+#body-homepage-phone{
+  width: 1226px;
+  margin: auto;
+}
+#body-homepage-phone>ul{
+  position: relative;
+  list-style: none;
+  display: flex;
+  flex-flow: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-between ;
+  height: 614px;
+}
+#body-homepage-phone>ul>li{
+  height: 300px;
+  width: 234px;
+  background-color: #fff;
+}
+#body-homepage-phone>ul>li:first-child{
+  height: 614px;
+}
+#body-homepage-phone>ul>li:not(:first-child)>a{
+  padding: 20px 0;
+  box-sizing: border-box;
+}
+#body-homepage-phone>ul>li>a{
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: #757575;
+  text-align: center;
+}
+#body-homepage-phone>ul>li>a>div{
+  width: 160px;
+  height: 160px;
+  margin: 0 37px 18px 37px;
+}
+#body-homepage-phone>ul>li>a>h3{
+  margin: 0 10px 2px;
+  font-size: 14px;
+  font-weight: 400;
+  color: #333;
+}
+#body-homepage-phone>ul>li>a>p.phone-descrip{
+  margin: 0 10px 10px;
+  font-size: 12px;
+  height: 18px;
+  color: #b0b0b0;
+}
+#body-homepage-phone>ul>li>a>p.phone-price{
+  color: #ff6700;
+}
+#body-homepage-phone>ul>li:hover{
+  position: relative;
+  bottom: 2px;
+  transition: .3s;
+  box-shadow: 10px 10px 10px 0px rgba(0, 0, 0,.1),-10px 10px 10px 0px rgba(0, 0, 0,.1);
+}
 
 
 
@@ -731,10 +837,31 @@ li{
   transition: .5s;
 }
 #footer-page-ad-mi{
-  font-size: 12px;
-  color: #616161;
   margin-top: 10px;
   height: 21px;
+  font-size: 12px;
+  color: #616161;
+  position: relative;
+}
+#footer-page-ad-mi>a{
+  /* display: inline-block;
+  width: 24px;
+  height: 24px; */
+}
+#footer-page-ad-mi>a>img{
+  width: 24px;
+  height: 24px;
+  margin: 0 0 -5px 0;
+}
+#footer-page-wx-img{
+  display: none;
+  position: absolute;
+  width: 126px;
+  height: 126px;
+  left: 100px;
+}
+#footer-page-ad-mi>a:hover+img#footer-page-wx-img{
+  display: block;
 }
 
 #footer-footer{
